appId: com.lsimaocosta.calculadorapricesac
---
- pressKey: Home
- killApp
- evalScript: ${output.appReady = false}
- repeat:
    while:
      true: ${output.appReady == false}
    times: 6
    commands:
      - openLink:
          link: 'exp+calculadora-price-sac://expo-development-client/?url=http%3A%2F%2F10.0.2.2%3A8081&disableOnboarding=1'
      - tapOn:
          text: 'Continue'
          optional: true
      - tapOn:
          text: 'Go home'
          optional: true
      - tapOn:
          id: 'stub-ad-close-button'
          optional: true
      - extendedWaitUntil:
          visible:
            id: 'screen-calculator'
          timeout: 30000
          optional: true
      - runFlow:
          when:
            visible:
              id: 'screen-calculator'
          commands:
            - evalScript: ${output.appReady = true}
      - runFlow:
          when:
            visible:
              id: 'screen-premium'
          commands:
            - evalScript: ${output.appReady = true}
      - runFlow:
          when:
            visible:
              id: 'screen-comparison'
          commands:
            - evalScript: ${output.appReady = true}
      - runFlow:
          when:
            visible:
              id: 'screen-feedback'
          commands:
            - evalScript: ${output.appReady = true}
- tapOn:
    id: 'stub-ad-close-button'
    optional: true
